[package]
name = "ek-tm4c1294xl"
version = "0.1.0"
authors = ["Alexander Müllner <es16m017@technikum-wien.at>"]
build = "build.rs"

[profile.dev]
panic = "abort"
lto = false
opt-level = 0
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
debug = true

[dependencies]
cortexm4 = { path = "../../arch/cortex-m4" }
capsules = { path = "../../capsules" }
kernel = { path = "../../kernel" }
tm4c129x = { path = "../../chips/tm4c129x" }
