[package]
name = "hail"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"

[profile.dev]
panic = "abort"
lto = true
opt-level = 0
debug = false
# Would prefer to have debug symbols, but there is a Rust bug
#	https://github.com/rust-lang/rust/issues/25270
#	https://github.com/rust-lang/rust/issues/34434
#debug = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
rust-libcore = "*"
cortexm4 = { path = "../../arch/cortex-m4" }
capsules = { path = "../../capsules" }
kernel = { path = "../../kernel" }
sam4l = { path = "../../chips/sam4l" }
