[package]
name = "hail"
version.workspace = true
authors.workspace = true
build = "build.rs"
edition.workspace = true

[dependencies]
components = { path = "../components" }
cortexm4 = { path = "../../arch/cortex-m4" }
kernel = { path = "../../kernel" }
sam4l = { path = "../../chips/sam4l" }

core-capsules = { path = "../../capsules/core" }
extra-capsules = { path = "../../capsules/extra" }
