[package]
name = "hifive1"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
components = { path = "../components" }
rv32i = { path = "../../arch/rv32i" }
capsules = { path = "../../capsules" }
kernel = { path = "../../kernel" }
e310_g002 = { path = "../../chips/e310_g002" }
sifive = { path = "../../chips/sifive" }
