[package]
name = "hifive_inventor"
version.workspace = true
authors.workspace = true
build = "build.rs"
edition.workspace = true

[dependencies]
components = { path = "../components" }
rv32i = { path = "../../arch/rv32i" }
kernel = { path = "../../kernel" }
e310_g003 = { path = "../../chips/e310_g003" }
sifive = { path = "../../chips/sifive" }

core-capsules = { path = "../../capsules/core" }
extra-capsules = { path = "../../capsules/extra" }
