[package]
name = "hifive_inventor"
version.workspace = true
authors.workspace = true
build = "build.rs"
edition.workspace = true

[dependencies]
components = { path = "../components" }
rv32i = { path = "../../arch/rv32i" }
kernel = { path = "../../kernel" }
e310_g003 = { path = "../../chips/e310_g003" }
sifive = { path = "../../chips/sifive" }

capsules-core = { path = "../../capsules/core" }
capsules-extra = { path = "../../capsules/extra" }
