[package]
name = "host_emulation"
authors = ["jflat", "Krzysztof Kanas"]
version = "0.1.0"
edition = "2018"

[dependencies]
capsules = { path = "../../capsules" }
components = { path = "../components" }
kernel = { path = "../../kernel" }
tock-cells = { path = "../../libraries/tock-cells" }

tempfile = "3.1.0"
zerocopy = { version = "=0.3.0" }
clap = "2.33.0"
signal-hook = "0.3.8"
libc = "0.2.95"