[package]
name = "imxrt1050-evkb"
version.workspace = true
authors.workspace = true
build = "build.rs"
edition.workspace = true

[dependencies]
components = { path = "../components" }
cortexm7 = { path = "../../arch/cortex-m7" }
capsules = { path = "../../capsules" }
kernel = { path = "../../kernel" }
imxrt10xx = { path = "../../chips/imxrt10xx" }
