[package]
name = "launchxl"
version = "0.1.0"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "launchxl"
path = "src/main.rs"

[[bin]]
name = "launchxlccfg"
path = "src/ccfg.rs"

[dependencies]
components = { path = "../components" }
cortexm4 = { path = "../../arch/cortex-m4" }
capsules = { path = "../../capsules" }
kernel = { path = "../../kernel" }
cc26x2 = { path = "../../chips/cc26x2" }
enum_primitive = { path = "../../libraries/enum_primitive" }
